Fixed footer overlap on group edit page. Setup route for group page (just redirects for now). Small changes to group edit page.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,10 @@ body {
   padding: 10px;
 }
 
+#content-area{
+  margin-bottom: 50px;
+}
+
 footer {
   width: 100%;
   background-color: #F8F8F8;
